force-app/main/default/objects/Membership_Mapping__mdt/Membership_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps default values based on value received from giving system</description>
    <label>Membership Mapping</label>
    <pluralLabel>Membership Mappings</pluralLabel>
</CustomObject>