force-app/main/default/objects/Membership_Mapping__mdt/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>