force-app/main/default/objects/Membership_Mapping__mdt/fields/Donation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Record_Type__c</fullName>
    <label>Donation Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
                <default>true</default>
                <label>Membership</label>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>