force-app/main/default/objects/Membership_Mapping__mdt/fields/Membership_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Sub_Type__c</fullName>
    <label>Membership Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
                <default>true</default>
                <label>Student</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>&lt; $250k</fullName>
            </value>
            <value>
                <fullName>$250k-$500k</fullName>
            </value>
            <value>
                <fullName>$500k - $1MM</fullName>
            </value>
            <value>
                <fullName>$1MM+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>