force-app/main/default/objects/Membership_Mapping__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs to Renew</fullName>
                <default>true</default>
                <label>Needs to Renew</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Donation Received – Acknowledgement Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>