force-app/main/default/objects/Membership_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
                <default>true</default>
                <label>Membership</label>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Major Gift</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Enterprise - $2,500</fullName>
            </value>
            <value>
                <fullName>Corporate - $1,250</fullName>
            </value>
            <value>
                <fullName>Business - $500</fullName>
            </value>
            <value>
                <fullName>Small Business - $300</fullName>
            </value>
            <value>
                <fullName>Entrepreneur - $150</fullName>
            </value>
            <value>
                <fullName>Individual - $100</fullName>
            </value>
            <value>
                <fullName>Visionary - $50,000.00</fullName>
            </value>
            <value>
                <fullName>Lead Investor - $25,000.00</fullName>
            </value>
            <value>
                <fullName>Investor - $15,000.00</fullName>
            </value>
            <value>
                <fullName>Catalyst - $10,000.00</fullName>
            </value>
            <value>
                <fullName>Chairman&apos;s Circle - $7,500.00</fullName>
            </value>
            <value>
                <fullName>President&apos;s Circle - $5,000.00</fullName>
            </value>
            <value>
                <fullName>Executive Circle - $3,500.00</fullName>
            </value>
            <value>
                <fullName>Super Fan - $2,500.00</fullName>
            </value>
            <value>
                <fullName>Patron - $1,500.00</fullName>
            </value>
            <value>
                <fullName>Fan - $1,250.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>